# agentic-integration-platform

./: .augment-guidelines  .env.example  .gitignore  Dockerfile  LICENSE  MODERN_UI_SHOWCASE.md  Makefile  README.md  UITest.md  alembic.ini  demo_complete_flow.py  demo_ui_complete.py  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  run-agentic-tests.sh
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  main.py  test.py
app/api/v1/: __init__.py  main.py
app/api/v1/endpoints/: integrations.py  knowledge.py  mcp.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/database/: __init__.py  session.py
app/models/: __init__.py  ai.py  base.py  integration.py  knowledge.py  system.py  user.py
app/schemas/: integration.py  knowledge.py  mcp.py
app/services/: __init__.py
app/services/ai/: __init__.py  anthropic_service.py  base.py  factory.py  openai_service.py  prompt_manager.py
app/services/codegen/: __init__.py  analyzer.py  generator.py  templates.py  validator.py
app/services/execution/: __init__.py  integration_executor.py
app/services/knowledge/: __init__.py  entity_service.py  graph_service.py  pattern_service.py  vector_service.py
app/services/mcp/: __init__.py  context_manager.py  conversation_service.py  session_manager.py  tool_registry.py
docs/: DEVELOPMENT_DATA.md
frontend/: .eslintrc.json  .prettierrc  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.complex.js  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page-complex.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/dashboard/: activity-feed.tsx  dashboard-simple.tsx  integration-card.tsx  metrics-cards.tsx  modern-dashboard.tsx  quick-actions.tsx
frontend/components/integration/: integration-wizard.tsx
frontend/components/knowledge/: knowledge-graph.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/mcp/: chat-input.tsx  chat-message.tsx  conversation-list.tsx  mcp-chat.tsx
frontend/components/ui/: floating-action-button.tsx  notification-dropdown.tsx  progress.tsx  search-modal.tsx  toast.tsx
frontend/components/widgets/: activity-widget.tsx  chart-widget.tsx  quick-actions-widget.tsx  stats-widget.tsx
frontend/hooks/: use-integrations.ts  use-knowledge.ts  use-mcp.ts  use-notifications.ts
frontend/tests/: global-setup.ts  global-teardown.ts
frontend/tests/e2e/: agentic-workflow.spec.ts
scripts/: add_relationships.sh  init-db.sql  init_dev_data.py  populate_kg_simple.sh  populate_knowledge_graph.py
tests/: __init__.py  conftest.py  test_agentic_workflow_integration.py
tests/fixtures/: __init__.py  factories.py  test_data.py
tests/integration/: __init__.py  test_app.py
tests/unit/: __init__.py
tests/unit/core/: test_config.py  test_exceptions.py  test_logging.py
tests/unit/models/: test_base.py  test_integration.py  test_knowledge.py  test_user.py
tests/unit/services/: __init__.py
tests/unit/services/ai/: __init__.py  test_anthropic_service.py  test_base.py  test_factory.py
tests/unit/services/knowledge/: __init__.py  test_entity_service.py  test_graph_service.py
